--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "typescript": "~4.6.3",
         "unplugin-vue-components": "^0.18.5",
         "vite": "^2.9.1",
+        "vite-plugin-pwa": "^0.12.0",
         "vite-plugin-windicss": "^1.8.3",
         "vite-svg-loader": "^3.2.0",
         "vue-tsc": "^0.33.9",
